@@ -53,6 +53,7 @@ class QSignalMapper;
 class QStackedLayout;
 class QStatusBar;
 class QVBoxLayout;
+class QStyleOptionViewItemV4;
 
 namespace Core {
 namespace Internal {
@@ -160,6 +161,9 @@ class FancyTabWidget : public QWidget {
   Q_OBJECT
 
 public:
+
+  static bool isGtkStyle();
+  static void drawGtkSelection(const QStyleOptionViewItemV4 &opt, QPainter *painter, double opacity);
 
   static void setup();
 
