@@ -30,6 +30,7 @@
 #include "config.h"
 #include "localize.h"
 #include "icon.h"
+#include "fancytabwidget.h"
 #include <QtGui/QStyledItemDelegate>
 #include <QtGui/QApplication>
 #include <QtGui/QFontMetrics>
@@ -176,16 +177,26 @@ public:
         Song song=index.data(GroupedView::Role_Song).value<Song>();
         int state=index.data(GroupedView::Role_Status).toInt();
         quint32 collection=index.data(GroupedView::Role_CollectionId).toUInt();
+        bool selected=option.state&QStyle::State_Selected;
+        bool mouseOver=option.state&QStyle::State_MouseOver;
+        bool gtk=mouseOver && FancyTabWidget::isGtkStyle();
 
         if (!isCollection && AlbumHeader==type) {
-            QStyleOptionViewItem opt(option);
-            painter->save();
-            painter->setOpacity(0.75);
-            QApplication::style()->drawPrimitive(QStyle::PE_PanelItemViewItem, &option, painter, 0L);
-            painter->restore();
+            if (mouseOver && gtk) {
+                FancyTabWidget::drawGtkSelection(option, painter, (selected ? 0.75 : 0.25)*0.75);
+            } else {
+                painter->save();
+                painter->setOpacity(0.75);
+                QApplication::style()->drawPrimitive(QStyle::PE_PanelItemViewItem, &option, painter, 0L);
+                painter->restore();
+            }
             painter->save();
             painter->setClipRect(option.rect.adjusted(0, option.rect.height()/2, 0, 0), Qt::IntersectClip);
-            QApplication::style()->drawPrimitive(QStyle::PE_PanelItemViewItem, &option, painter, 0L);
+            if (mouseOver && gtk) {
+                FancyTabWidget::drawGtkSelection(option, painter, selected ? 0.75 : 0.25);
+            } else {
+                QApplication::style()->drawPrimitive(QStyle::PE_PanelItemViewItem, &option, painter, 0L);
+            }
             painter->restore();
             if (!state && !view->isExpanded(song.key, collection) && view->isCurrentAlbum(song.key)) {
                 QVariant cs=index.data(GroupedView::Role_CurrentStatus);
@@ -194,7 +205,11 @@ public:
                 }
             }
         } else {
-            QApplication::style()->drawPrimitive(QStyle::PE_PanelItemViewItem, &option, painter, 0L);
+            if (mouseOver && gtk) {
+                FancyTabWidget::drawGtkSelection(option, painter, selected ? 0.75 : 0.25);
+            } else {
+                QApplication::style()->drawPrimitive(QStyle::PE_PanelItemViewItem, &option, painter, 0L);
+            }
         }
         QString title;
         QString track;
